# ReSkyward

./: .gitignore  BellSchedule.py  MainWindow.ui  README.md  __main__.py  experimentmode.py  main.py  mixin.py  pyproject.toml  scrape.py  skyward.py  skywardDraftUI.ui  skywardview.py  speechrec.py
resource/: bell.scss  focusout.scss  main.scss  skyward.scss  theme_dark.scss  theme_light.scss  titlebar.scss
resource/dark/: bell.qss  focusout.qss  main.qss  skyward.qss  titlebar.qss
scr/: BellSchedule.py  parser.py  scrape.py  skyward.py  sqlgrades.py
ui/: BellUI.py  MainWindow.ui  NewMainWindow.ui  NewMainWindow2.ui  config.py  customTitleBar.py  experimentmode.py  login.py  main.py  newUI.py  pointTableWidget.py  settingsview.py  skywardview.py
